# lib/api-spec/openapi.yaml
@@ -279,13 +279,30 @@ components:
         category:
           type: string
           nullable: true
-        maxQuantity:
-          type: integer
-          default: 10
+        quantity:
+          type: string
+          nullable: true
+          default: ""
       required:
         - id
         - name
         - price
+
+    MenuGroup:
+      type: object
+      properties:
+        groupName:
+          type: string
+        pickupTime:
+          type: string
+        items:
+          type: array
+          items:
+            $ref: "#/components/schemas/FormItem"
+      required:
+        - groupName
+        - pickupTime
+        - items
 
     Form:
       type: object
@@ -305,7 +322,7 @@ components:
         items:
           type: array
           items:
-            $ref: "#/components/schemas/FormItem"
+            $ref: "#/components/schemas/MenuGroup"
         deliveryMode:
           type: string
           default: "Pickup Only"
@@ -313,9 +330,6 @@ components:
           type: string
           default: "Cash on Delivery (COD)"
         orderDeadline:
-          type: string
-          nullable: true
-        pickupTime:
           type: string
           nullable: true
         pickupLocation:
@@ -347,7 +361,7 @@ components:
         items:
           type: array
           items:
-            $ref: "#/components/schemas/FormItem"
+            $ref: "#/components/schemas/MenuGroup"
         deliveryMode:
           type: string
           default: "Pickup Only"
@@ -355,9 +369,6 @@ components:
           type: string
           default: "Cash on Delivery (COD)"
         orderDeadline:
-          type: string
-          nullable: true
-        pickupTime:
           type: string
           nullable: true
         pickupLocation:
@@ -378,7 +389,7 @@ components:
         items:
           type: array
           items:
-            $ref: "#/components/schemas/FormItem"
+            $ref: "#/components/schemas/MenuGroup"
         deliveryMode:
           type: string
           nullable: true
@@ -386,9 +397,6 @@ components:
           type: string
           nullable: true
         orderDeadline:
-          type: string
-          nullable: true
-        pickupTime:
           type: string
           nullable: true
         pickupLocation:
@@ -409,6 +417,12 @@ components:
           type: integer
         total:
           type: number
+        groupName:
+          type: string
+          nullable: true
+        pickupTime:
+          type: string
+          nullable: true
       required:
         - itemId
         - itemName
